# tauri-linux-content-type

./: Cargo.toml  README.md
nextjs/: .gitignore  .taurignore  Cargo.toml  Tauri.toml  package.json
nextjs/app/: alert.js  layout.js  page.js
nextjs/app/page1/: page.js
simple/: Cargo.toml  Tauri.toml
simple/web/: index.html
