[package]
name = "tauri-linux-content-type-test-nextjs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { workspace = true, features = [ "config-toml" ] }

[dependencies]
tauri = { workspace = true, features = [ "dialog-message", "config-toml" ] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
